--- a/cv.tex
+++ b/cv.tex
@@ -40,25 +40,24 @@
 %\moveleft.5\sectionwidth\centerline{Objective: Position as software engineer specializing in performance engineering.}
 \section{Education}
 \vspace*{0.1in}
-\textbf{Bachelor of Science}: University of Illinois at Urbana-Champaign, 2007
+\textbf{Bachelor of Science, Computer Science}:University of Illinois at Urbana-Champaign, 2007
 %\quad \quad \textit{Undergraduate GPA}: 3.51/4.00\\
 
-
-\textbf{Doctor of Philosophy}: University of Illinois at Urbana-Champaign, 2015\\
+\textbf{Doctor of Philosophy, Computer Science}: University of Illinois at Urbana-Champaign, 2015\\
 \quad \quad \textit{Advisor}: William D. Gropp\\
 %\quad \quad \textit{GPA}: 3.96/4.00
 
-\section{Awards}
+\section{Honors}
 \vspace*{0.2in}
 \input{./listOfAwards}
 
-\section{Courses Taken}
-\vspace*{0.2in}
-\input{./listOfCoursesShort_CV}
+%\section{Courses Taken}
+%\vspace*{0.2in}
+%\input{./listOfCoursesShort_CV}
 
 \section{Technical Skills}
 \vspace*{0.1in}
-\input{./listOfSkillSets}
+\input{./listOfSkillSetsForCV}
 
 \section{Experience}
 \vspace*{0.2in} 
@@ -68,7 +67,7 @@
 %TODO: make consistent with LinkedIn description 
 \section{Research Overview}
 \vspace*{0.1in}
-\input{./researchSummaryForCV} 
+\input{./researchSummaryForCV}
 
 \comments{
 \section{Volunteering Opportunities}
