--- a/cv.tex
+++ b/cv.tex
@@ -65,9 +65,10 @@
 
 %TODO: clarify and strengthen 
 %TODO: make consistent with LinkedIn description 
-\section{Research Overview}
-\vspace*{0.1in}
-\input{./researchSummaryForCV}
+
+%\section{Research Overview}
+%\vspace*{0.1in}
+%\input{./researchSummaryForCV}
 
 \comments{
 \section{Volunteering Opportunities}
@@ -91,4 +92,5 @@
 \vspace*{0.2in}
 \input{./listOfServices}
 \end{resume}
+
 \end{document}
