Updating list of experiences to split up the experiences from Summer 2010 and Summer 2011.

--- a/listOfSkillSetsForCV.tex
+++ b/listOfSkillSetsForCV.tex
@@ -1,8 +1,8 @@
-{{\bf Languages}: C, C++, python, Fortran, bash, csh, CUDA} \\
+{{\bf Languages}: C, C++, python, Fortran, bash, csh, CUDA}
 
-{{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn} \\
+{{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn}
 
-{{\bf Libraries for Parallelism}: POSIX threads (Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)} \\
+{{\bf Libraries for Parallelism}: POSIX threads (Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)}
 
 {{\bf Performance Profiling Tools and Libraries}: hpcToolkit, PAPI, nvprof, gprof}
 
