Fixing capitalization of bullet in experience.

--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -12,7 +12,7 @@
 
 %\textbf{\underline{Long Articles}}\\
 
-\underline{\textit{Papers}}
+\underline{Papers}
 \begin{enumerate} 
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
@@ -28,7 +28,7 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 \item Vivek Kale. \textbf{\textit{The Correlation between Parallel Patterns and the NAS Parallel Benchmarks}}. ICSE 2010. May 2010. Johannesberg, South Africa.
 \end{enumerate} 
 
-\underline{\textit{Extended Abstracts}}
+\underline{Extended Abstracts}
 \begin{enumerate}
 \item Vivek Kale and Martin Kong. \textbf{\textit{Enhancing Support in OpenMP to Improve Data Locality in Application Programs Using Task Scheduling}}. OpenMPCon 2018. September 2018. Barcelona, Spain.
 \item Vivek Kale and William D. Gropp. \textbf{\textit{A User-defined Schedule for OpenMP}}. Extended Abstract. OpenMPCon
@@ -36,7 +36,7 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 \item Vivek Kale. \textbf{\textit{A Pattern Language for Dynamic Scheduling}}. ParaPLoP 2011. May 2011. Carefree, USA.
 \end{enumerate}
 
-\underline{\textit{Posters}}
+\underline{Posters}
 \begin{enumerate}
 \item Vivek Kale, Harshitha Menon and Karthik Senthil. \textbf{\textit{Adaptive Loop Scheduling with Charm++ to Improve Performance of Scientific Applications}}. SC 2017. November 2017. Denver, USA. \textit{\textcolor{red}{(Selected as a Candidate for Best Poster)}}
 \item Vivek Kale, Simplice Donfack, Laura Grigori and William D. Gropp. \textbf{\textit{Balancing the Tradeoff Between Load Balancing and Locality to Improve Performance of Scientific Applications}}. SC 2014. November 2014. New Orleans, USA.
@@ -45,11 +45,6 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 \end{enumerate}
 
 %TODO: add HadoopJitter here 
-
-
-
-
-
 
 %\item Vivek Kale. \textbf{\textit{Enabling Simulation of Renewable
 %    Energy Solutions through Supercomputers}}. Technical Report
