Updating list of experiences.

--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -13,8 +13,7 @@ of Charm++.
 \item Working with postdoc from LLNL on a proposal to study
 techniques that combine loop scheduling and load balancing to improve
 performance of scientific applications.
-\item Working with OpenMP Language Committee to support
-\url{https://sites.google.com/site/userdefschedopenmp}[user-defined schedules] in OpenMP.
+\item Working with OpenMP Language Committee to support user-defined loop schedules in OpenMP.
 \item Translating an x-ray tomography code written in
 Matlab code to C code and then parallelizing it to run on a supercomputer
 having nodes with GPGPUs. 
