Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -1,19 +1,14 @@
 \thispagestyle{empty} % this page does not have a header
-
 % TODO: fix experiences formatting 
 % TODO: fix experiences tabbing. 
 % TODO: add statistics to publications. 
 % TODO: fix/shorten research overview. 
-
 \newcommand{\comments}[1]{} 
-
 %\documentclass[serif, mathserif, final]{beamer}
 \documentclass[]{res} 
 \usepackage[utf8]{inputenc}
-\usepackage[english]{babel} 
-
+\usepackage[english]{babel}
 %\usepackage{phonenumber}
-
 \usepackage{hyperref}
 \usepackage{url} 
 \usepackage{xcolor}
@@ -30,7 +25,7 @@
 \textit{phone}: %\phonenumber[country=US,foreign]{2173697996} .
 \href{tel:12173697996}{+01 1-217-369-7996} .
 \textit{e-mail}: vivek.lkale@gmail.com .
-\textit{web}: \url{http://vivek112.googlepages.com} \\
+\textit{web}: \url{http://vlkale.github.io} \\
 }
 
 \vspace*{0.1in}
