--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -38,6 +38,7 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 
 \underline{Posters}
 \begin{enumerate}
+\item Vivek Kale and Oscar Hernandez. {\bf\textit{Performance Portability of User-defined Loop Schedules}}. DOE PPP 2019. April 2019. Denver, USA.
 \item Vivek Kale, Harshitha Menon and Karthik Senthil. \textbf{\textit{Adaptive Loop Scheduling with Charm++ to Improve Performance of Scientific Applications}}. SC 2017. November 2017. Denver, USA. \textit{\textcolor{red}{(Selected as a Candidate for Best Poster)}}
 \item Vivek Kale, Simplice Donfack, Laura Grigori and William D. Gropp. \textbf{\textit{Balancing the Tradeoff Between Load Balancing and Locality to Improve Performance of Scientific Applications}}. SC 2014. November 2014. New Orleans, USA.
 \item Vivek Kale, Amanda Randles and William D. Gropp. \textbf{\textit{Locality-Optimized Mixed Static/Dynamic
@@ -51,22 +52,3 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 %  2009. TR0210-373. May 2009. University of Illinois at Urbana-Champaign.
 
 %\end{enumerate} 
-
-\comments{
-\textbf{\underline{Short Articles}}\\ 
-\begin{enumerate}
-
-\end{enumerate}
-}
-
-\comments{
-``That Damn Ram: Hydraulic Power at Chesterwood, 1908-1932,''
-Unpublished paper for Chesterwood and the Society for Historic
-Preservation, 1984.
-
-``Sculpture Media,'' Unpublished paper for Chesterwood and the
-Society of Historical Preservation, 1984.
-
-{\it The Chesterwood Pedestal}, Volume 3, 1985, Newsletter of The
-Society of Historical Preservation, Chesterwood, Stockbridge, MA.
-}
