Updates to position descrioption

--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,11 +1,18 @@
-{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun '18 - present}
+{Charmworks, Inc. and LoopSchedSoft, Inc.$\>$$\>$$\>$$\> $Software Developer$\>$$\>$$\>$$\>$Jan 2019 - present}
 \begin{itemize}
-\item Integrating a shared memory library for sophisticated loop scheduling strategies, with some
-strategies being based on strategies I’ve developed for my dissertation, into the current version
+\item Developing a proposal for NSF to fund a startup for loop scheduling for desktop computing. 
+\item Helping review slides for pitch of charm++ software. 
+\item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library. 
+\item Providing feedback for tutorials on Charm++ to improve them. 
+\end{itemize}
+
+{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun '18 - Jan 2019}
+\begin{itemize}
+\item Integrating a shared memory library for sophisticated loop scheduling strategies, with some strategies being based on strategies I’ve developed for my dissertation, into the current version
 of Charm++.
 \item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
 \item Providing feedback for tutorials on Charm++ to improve them.
-\end{itemize} 
+\end{itemize}
 
 {University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
 \vspace*{-0.0in} 
