--- a/cv.tex
+++ b/cv.tex
@@ -14,7 +14,7 @@
 \usepackage{xcolor}
 
 \begin{document}
-\name{Vivek L. Kale}
+\name{Vivek L. Kale, PhD}
 
 \begin{resume}
 \vspace{0.2in}
@@ -35,10 +35,12 @@
 %\moveleft.5\sectionwidth\centerline{Objective: Position as software engineer specializing in performance engineering.}
 \section{Education}
 \vspace*{0.1in}
-\textbf{Bachelor of Science, Computer Science}:University of Illinois at Urbana-Champaign, 2007
+\textbf{Bachelor of Science, Computer Science}\\
+University of Illinois at Urbana-Champaign, 2007
 %\quad \quad \textit{Undergraduate GPA}: 3.51/4.00\\
 
-\textbf{Doctor of Philosophy, Computer Science}: University of Illinois at Urbana-Champaign, 2015\\
+\textbf{Doctor of Philosophy, Computer Science}\\
+University of Illinois at Urbana-Champaign, 2015\\
 \quad \quad \textit{Advisor}: William D. Gropp\\
 %\quad \quad \textit{GPA}: 3.96/4.00
 
