--- a/resume.tex
+++ b/resume.tex
@@ -24,23 +24,17 @@
 \vspace{0.1in}
 
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
-
-\textit{\bf P}: 217-369-7996. \textit{\bf E}: vivek.lkale@gmail.com. \textit{\bf W}: http://vivek112.googlepages.com.
-
-\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
+\begin{center}
+\textit{\bf P}: 217-369-7996. \textit{\bf E}: vivek.lkale@gmail.com. \textit{\bf W}: http://vlkale.com. U.S. Citizen
+\end{center}
+%\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
+\begin{center}
 \moveleft.5\sectionwidth\centerline{{\it Objective}: Position as software engineer specializing in performance engineering.}
-
+\end{center}
 \section{Education}
 \vspace{0.1in}
-    B.S., Computer Science, 2007 \\
-    University of Illinois at Urbana-Champaign\\
-    {\it GPA}: 3.51/4.00 \\
-
-    Ph.D., Computer Science, 2015 \\        
-    University of Illinois at Urbana-Champaign\\ 
-    {\it Advisor}: William D. Gropp \\ 
-    {\it GPA}: 3.96/4.00 \\
-
+    B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
+    Ph.D., Computer Science, 2015,  University of Illinois at Urbana-Champaign, {\it Advisor}: William D. Gropp
 \section{Awards}
 \vspace{0.1in}
 \input{listOfAwards} 
@@ -52,7 +46,6 @@
 \section{Experience}
 \vspace{0.1in} 
 \input{listOfExperiences} 
-
 
 %\section{Research Overview} 
 %I have worked on low-overhead dynamic scheduling strategies for
@@ -66,12 +59,10 @@
 %performance bottlenecks for bulk-synchronous and loosely synchronous
 %MPI applications running on next-generation supercomputers or a
 %cloud-based infrastructure. 
-
 \vspace{0.1in}
 
 \section{Publications}
 \input{listOfPubs} 
- 
-\end{resume}
 
+\end{resume}
 \end{document}
