Adding courses section.
Updating experiences section.

--- a/cv.tex
+++ b/cv.tex
@@ -48,9 +48,9 @@ University of Illinois at Urbana-Champaign, 2015\\
 \vspace*{0.2in}
 \input{./listOfAwards}
 
-%\section{Courses Taken}
-%\vspace*{0.2in}
-%\input{./listOfCoursesShort_CV}
+\section{Courses Taken}
+\vspace*{0.2in}
+\input{./listOfCoursesShort}
 
 \section{Technical Skills}
 \vspace*{0.1in}
@@ -58,7 +58,7 @@ University of Illinois at Urbana-Champaign, 2015\\
 
 \section{Experience}
 \vspace*{0.2in} 
-\input{./listOfExperiences} 
+\input{./listOfExperiences}
 
 %TODO: clarify and strengthen 
 %TODO: make consistent with LinkedIn description 
