--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,17 +1,16 @@
-{Charmworks, Inc. and LoopSchedSoft, Inc.$\>$$\>$$\>$$\> $Software Developer$\>$$\>$$\>$$\>$Jan 2019 - present}
-\begin{itemize}
-\item Developing a proposal for NSF to fund a startup for loop scheduling for desktop computing. 
-\item Helping review slides for pitch of charm++ software. 
-\item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library. 
-\item Providing feedback for tutorials on Charm++ to improve them. 
-\end{itemize}
+{Charmworks, Inc. and LoopSchedSoft, Inc.$\>$$\>$$\>$$\> $Software Developer$\>$$\>$$\>$$\>$Jun '19 - present}
 
-{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun '18 - Jan 2019}
+{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun '18 - Apr 2019}
 \begin{itemize}
+\item Starting work on a LDRD-type proposal for combined loop scheduling and load balancing. 
+\item Working on a NSF proposal for a startup to fund the idea of loop scheduling for desktop computers. 
+\item Working on developing a proposal for an OpenMP User-defined Loop Schedule in the OpenMP Language Committee, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto. 
+\item Working on publication of two papers for User-defined Scheduling in April and May. 
+\item Helping modify slides for pitch and marketing of Charm++ software.
+\item Providing feedback for tutorials on Charm++ to improve them. 
 \item Integrating a shared memory library for sophisticated loop scheduling strategies, with some strategies being based on strategies I’ve developed for my dissertation, into the current version
 of Charm++.
-\item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
-\item Providing feedback for tutorials on Charm++ to improve them.
+%item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
 \end{itemize}
 
 {University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
