--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,17 +1,22 @@
-{Charmworks, Inc. and LoopSchedSoft, Inc.$\>$$\>$$\>$$\> $Software Developer$\>$$\>$$\>$$\>$Jun '19 - present}
-
-{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun '18 - Apr 2019}
+%Charmworks, Inc. and LoopSchedSoft, Inc.$\>$$\>$$\>$$\> $Software Developer$\>$$\>$$\>$$\>$Jun '19 - present}
+\dates{Jun. '18 - Apr. '19}
+\location{Champaign, Illinois}
+\title{Software Developer}
+\employer{Charmworks, Inc.}
+{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun. '18 - Apr. '19}
+%\begin{position}
 \begin{itemize}
-\item Starting work on a LDRD-type proposal for combined loop scheduling and load balancing. 
-\item Working on a NSF proposal for a startup to fund the idea of loop scheduling for desktop computers. 
-\item Working on developing a proposal for an OpenMP User-defined Loop Schedule in the OpenMP Language Committee, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto. 
-\item Working on publication of two papers for User-defined Scheduling in April and May. 
-\item Helping modify slides for pitch and marketing of Charm++ software.
-\item Providing feedback for tutorials on Charm++ to improve them. 
-\item Integrating a shared memory library for sophisticated loop scheduling strategies, with some strategies being based on strategies I’ve developed for my dissertation, into the current version
-of Charm++.
+\item Collaborating with LLNL (Harshitha Menon) on an LDRD-type proposal for a synergistic loop scheduling and load balancing strategy. 
+\item Worked on Performance Portability of Loop scheduling with ORNL (Oscar Hernandez) through DoE Exascale Computing Program.
+\item Added examples of loop scheduling in OpenMP Language Committee.
+\item Working on a NSF startup SBIR proposal for loop scheduling for desktop computers. 
+\item Collaborating on developing a proposal for an OpenMP User-defined Loop Schedule based on OpenMPCon 2017 paper in the OpenMP Language Committee, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto. 
+\item Currently working on publication of two papers for User-defined Loop Scheduling.
+\item Assisting with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++. 
+\item Integrating a shared memory library for sophisticated loop scheduling strategies, including some based on my dissertation, into the current version of Charm++.
 %item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
 \end{itemize}
+%\end{position}
 
 {University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
 \vspace*{-0.0in} 
@@ -35,7 +40,7 @@ for an application code's efficient execution using the Globus Toolkit.
 \end{itemize}
 
 %TODO: adaptive VS hybrid VS ... 
-{\small Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. '16 - Nov. '16}
+{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. '16 - Nov. '16}
 \vspace*{-0.0in}
 \begin{itemize}
 \item Implemented mixed static/dynamic loop scheduling
@@ -92,4 +97,13 @@ LLNL supercomputers.
 \begin{itemize}
 \item Wrote code for testing trading system infrastructure functions under extreme market conditions.
 \item Analyzed performance bottlenecks of system infrastructure functions.
+\end{itemize}
+
+
+{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. ‘07 – Apr. ‘08}
+\vspace*{-0.0in}
+\begin{itemize} 
+\item Primarily responsible for developing, testing and documenting a service-oriented software application for health and status monitoring  of large-scale parallel and distributed networked systems.
+\item Developed company standards for software development (System Requirements Specifications, Design Documentation).
+\item Designed and implemented algorithms for cost optimization applications. Used dynamic programming, discrete optimization heuristics, and APIs.
 \end{itemize}
