Updates from Overleaf

--- a/listOfCourses.tex
+++ b/listOfCourses.tex
@@ -2,22 +2,18 @@
 %\item[] Designing and Building Scientific Applications,
 %  Parallel Software Patterns, Program Optimization, Parallel Computer Architecture, Algorithms, Artificial Intelligence, Software Engineering
 %\end{itemize}
-
 %\begin{itemize}
-Designing and Building Scientific Applications
+%Designing and Building Scientific Applications
 %\renewcommand*{\do}[1]{\item #1}
-\renewcommand*{\do}[1]{,#1}\forcsvlist{1}{\}{\input{listOfCourses.csv}}
+%\renewcommand*{\do}[1]{,#1}\forcsvlist{1}{\}{\input{listOfCourses.csv}}
 %\end{ 
-
-
-}
-
-\begin{itemize}
-\item Designing and Building Scientific Applications
-\item Parallel Software Patterns
-\item Program Optimization
-\item Parallel Computer Architecture 
-\item Algorithms 
-\item Artificial Intelligence
-\item Software Engineering
-\end{itemize} 
+\input{listOfCourses.csv}
+%\begin{itemize}
+%\item Designing and Building Scientific Applications
+%\item Parallel Software Patterns
+%\item Program Optimization
+%\item Parallel Computer Architecture 
+%\item Algorithms 
+%\item Artificial Intelligence
+%\item Software Engineering
+%\end{itemize} 
