--- a/cv.tex
+++ b/cv.tex
@@ -44,14 +44,14 @@
 \section{Education}
 \vspace*{0.1in}
 \textbf{Bachelor of Science, Computer Science}\\
-University of Illinois at Urbana-Champaign, 2007
+University of Illinois at Urbana-Champaign, May 2007
 %\quad \quad \textit{Undergraduate GPA}: 3.51/4.00\\
 
 \textbf{Master of Science, Computer Science}\\ 
-University of Illinois at Urbana-Champaign, 2010
+University of Illinois at Urbana-Champaign, December 2010
 
 \textbf{Doctor of Philosophy, Computer Science}\\
-University of Illinois at Urbana-Champaign, 2015\\
+University of Illinois at Urbana-Champaign, May 2015\\
 \quad \quad \textit{Advisor}: William D. Gropp\\
 %\quad \quad \textit{GPA}: 3.96/4.00
 
