--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -5,14 +5,15 @@
 \employer{Charmworks, Inc.}
 {Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun. '18 - Apr. '19}
 %\begin{position}
+\vspace{0.0in}
 \begin{itemize}
 \item Collaborating with LLNL (Harshitha Menon) on an LDRD-type proposal for a synergistic loop scheduling and load balancing strategy. 
-\item Worked on Performance Portability of Loop scheduling with ORNL (Oscar Hernandez) through DoE Exascale Computing Program.
-\item Added examples of loop scheduling in OpenMP Language Committee.
+\item Worked on making User-defined Loop Scheduling portable across different parallel programming library, done with ORNL (Oscar Hernandez) through DoE Exascale Computing Program.
+\item Added examples of loop scheduling in OpenMP in Examples section of OpenMP Specification.
 \item Working on a NSF startup SBIR proposal for loop scheduling for desktop computers. 
-\item Collaborating on developing a proposal for an OpenMP User-defined Loop Schedule based on OpenMPCon 2017 paper in the OpenMP Language Committee, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto. 
-\item Currently working on publication of two papers for User-defined Loop Scheduling.
-\item Assisting with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++. 
+\item Collaborating on developing a proposal to add an OpenMP User-defined Schedule to the OpenMP specification based on an OpenMPCon 2017 paper, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto.
+\item Currently working on two papers for User-defined Loop Scheduling for publication.
+\item Assisting with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++.
 \item Integrating a shared memory library for sophisticated loop scheduling strategies, including some based on my dissertation, into the current version of Charm++.
 %item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
 \end{itemize}
