Adding entry in experience for Brookhaven National Laboratory.

--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,8 +1,14 @@
-%Charmworks, Inc. and LoopSchedSoft, Inc.$\>$$\>$$\>$$\> $Software Developer$\>$$\>$$\>$$\>$Jun '19 - present}
+\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$May 2019 - present}}
+\begin{itemize}
+    \item Working on locality-aware loop scheduling strategies, and generally user-defined loop schedules, in the context of MPI+OpenMP applications
+\item  Developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
+
+\end{itemize}
+
 \dates{Jun. '18 - Apr. '19}
 \location{Champaign, Illinois}
 \title{Software Developer}
-\employer{Charmworks, Inc.}
+\employer{Charmworks, Inc.} 
 {Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun. '18 - Apr. '19}
 %\begin{position}
 \vspace{0.0in}
