Updating with latest two pubs from this year.

--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -14,6 +14,8 @@
 
 \underline{Papers}
 \begin{enumerate} 
+\item Jonas H Müller Korndörfer, Florina M. Ciorba, Akan Yilmaz, Christian Iwainsky, Johannes Doerfert, Hal Finkel, Vivek Kale, Michael Klemm. \textit{A Runtime Approach for Dynamic Load Balancing of OpenMP Parallel Loops in LLVM}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2019. Denver, Colorado, USA. 
+\item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas H. Muller Korndorfer, Florina M. Ciorba. \textit{Toward a Standard Interface for User-Defined Scheduling in OpenMP}. International Workshop on OpenMP. September 23, 2019. Auckland, New Zealand. 
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
 \item Vivek Kale, Abhinav Bhatele and William D. Gropp. \textbf{\textit{Weighted Locality-sensitive Scheduling for
