--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,7 +1,8 @@
-\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$May 2019 - present}}
+\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$1;95;0c\>$$\>$$\>$May 2019 - present}}
 \begin{itemize}
     \item Working on locality-aware loop scheduling strategies, and generally user-defined loop schedules, in the context of MPI+OpenMP applications
-\item  Developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
+    \item Developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
+    Serving as Program Manager for DoE Exascale Computing Project’s project SOLLVE and asBrookhaven National Laboratory’s representative in the OpenMP Architecture Review Board.
 
 \end{itemize}
 
@@ -9,7 +10,7 @@
 \location{Champaign, Illinois}
 \title{Software Developer}
 \employer{Charmworks, Inc.} 
-{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun. '18 - Apr. '19}
+\textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun. '18 - Apr. '19}
 %\begin{position}
 \vspace{0.0in}
 \begin{itemize}
@@ -25,7 +26,7 @@
 \end{itemize}
 %\end{position}
 
-{University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
+\textbf{University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
 \vspace*{-0.0in} 
 \begin{itemize}
 \item Working with postdoc from LLNL on a proposal to study
@@ -47,7 +48,7 @@ for an application code's efficient execution using the Globus Toolkit.
 \end{itemize}
 
 %TODO: adaptive VS hybrid VS ... 
-{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. '16 - Nov. '16}
+\textbf{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. '16 - Nov. '16}
 \vspace*{-0.0in}
 \begin{itemize}
 \item Implemented mixed static/dynamic loop scheduling
@@ -59,7 +60,7 @@ strategies within Charm++'s thread scheduling library.
 \item Assisted with business aspects of a high-tech startup. 
 \end{itemize} 
 
-{ University of Illinois$\>$$\>$$\>$$\>$Postdoctoral Associate$\>$$\>$$\>$$\>$Jul. '15 – Dec. '15}
+\textbf{ University of Illinois$\>$$\>$$\>$$\>$Postdoctoral Associate$\>$$\>$$\>$$\>$Jul. '15 – Dec. '15}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Developed library that allows application programmers to use strategies from dissertation.
@@ -68,7 +69,7 @@ GPGPU processor and Intel Xeon Phi.
 \item Incorporated over-decomposition and locality-aware scheduling into strategies from dissertation.
 \end{itemize}
 
-{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Lawrence Scholar$\>$$\>$$\>$$\>$Feb. '12 – Jun. '14}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Lawrence Scholar$\>$$\>$$\>$$\>$Feb. '12 – Jun. '14}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Measured MPI communication delays for micro-benchmarks codes run on supercomputers and worked to find tools to measure dequeue overheads of OpenMP loop schedulers.
@@ -80,7 +81,7 @@ techniques and runtime.
 of low-overhead schedulers.
 \end{itemize}
 
-{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun. '11 - Sep. '11}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun. '11 - Sep. '11}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Experimented with different OpenMP parameters of implemented MPI+OpenMP application code to understand performance optimizations on
@@ -88,13 +89,13 @@ LLNL supercomputers.
 \item Developed software design for low-overhead loop scheduling library based on libgomp software design.
 \end{itemize} 
 
-{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug. '10 - Sep. '10}
+\textbf{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug. '10 - Sep. '10}
 \begin{itemize}
 \item Analyzed results for the performance tests developed on NERSC machines.
 \item Compared with collectives in reference to MPI (mpich2) runtime system.
 \end{itemize}
 
-{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May. '10 - Aug. '10}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May. '10 - Aug. '10}
 \begin{itemize}
 \item Modified libgomp runtime system in order to integrate low-overhead schedulers within it.
 \item Developed an algorithm multi-stage low-overhead loop scheduler with each stage associated with a level in the memory hierarchy, allowing for MPI-shared memory extensions to be used in conjunction with the low-overhead loop scheduling strategies.
@@ -106,8 +107,7 @@ LLNL supercomputers.
 \item Analyzed performance bottlenecks of system infrastructure functions.
 \end{itemize}
 
-
-{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. ‘07 – Apr. ‘08}
+\textbf{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. ‘07 – Apr. ‘08}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Primarily responsible for developing, testing and documenting a service-oriented software application for health and status monitoring  of large-scale parallel and distributed networked systems.
